--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
  <!DOCTYPE html>
- <html lang="en">
+ <html lang="ru">
  <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
     <link href="./fonts/fonts.css" rel="stylesheet"/>
     <link href="./styles/global.css" rel="stylesheet"/>
     <link href="./styles/style.css" rel="stylesheet"/>
   </head>
-  <body class="glavnaya__section">
+  <body class="header_section">
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
