--- a/index.html
+++ b/index.html
@@ -80,9 +80,6 @@
               </article>
             </a>
           </li>
-            </article>
-            </a>
-          </li>
           <li class="lots__card-list-item">
             <a class="card-link" href="#">
               <article class="card card_type_book">
@@ -148,7 +145,7 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="address">
+      <address class="information">
         <a class="nomber__too" href="tel:+99995555555"> +9 999 555 5555</a>
         <a class="pochta__too" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265, Амстердам</p>
