ссылку на свой макет из задания добавил в readme

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="information">
+      <address class="header__address address">
         <a class="nomber__too" href="tel:+99995555555"> +9 999 555 5555</a>
         <a class="pochta__too" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265, Амстердам</p>
